--- a/Responsive Web Design/8_Responsive Web Design Projects/1_Build a Tribute Page/ElonMusk_A_Tribute_Page.html
+++ b/Responsive Web Design/8_Responsive Web Design Projects/1_Build a Tribute Page/ElonMusk_A_Tribute_Page.html
@@ -1,45 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link href="ElonMusk_A_Tribute_Page.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+
 <div id="main">
-  <h1 id="title">Elon Musk</h1>
-    <p>the great entrepreneurial innovators of our time</p>
-      <div id="img-div">
-        <img id="image" src="https://wallpapercave.com/wp/wp2048440.jpg" alt="Elon Musk Photo at Conference">
-        <figcaption id="img-caption"><em>Tesla CEO Elon Musk speak at Code Conference 2021 in Beverly Hills</em></figcaption>
+    <h1 id="title">Elon Musk</h1>
+      <p>the great entrepreneurial innovators of our time</p>
+        <div id="img-div">
+          <img id="image" src="https://wallpapercave.com/wp/wp2048440.jpg" alt="Elon Musk Photo at Conference">
+          <figcaption id="img-caption"><em>Tesla CEO Elon Musk speak at Code Conference 2021 in Beverly Hills</em></figcaption>
+      </div>
+      <div id="tribute-info">
+        <h3>About Him</h3>
+        <ul>
+          <li><strong>Early Life</strong> -	Elon Reeve Musk, June 28 1971, (age 50) Pretoria, Transvaal, South Africa
+          </li>
+          <br>
+          <li><strong>Education</strong> - In 1995 University of Pennsylvania, Graduated with a Bachelor of Arts degree in physics and a Bachelor of Science degree in economics.
+          </li>
+          <br>
+          <h3>Business Carrer</h3>
+          <li><strong>Zip2</strong> - 1995 Founded Web Software Zip2 with others, Compaq acquired Zip2 for $307 million in cash in February 1999, and Musk received $22 million for his 7-percent share.
+          </li>
+          <br>
+          <li><strong>X.com</strong> - 1999 Musk co-founded X.com, renamed PayPal in 2001. In 2002, PayPal was acquired by eBay for $1.5 billion in stock, of which Musk—the largest shareholder with 11.72% of shares—received $175.8 million.
+          </li>
+          <br>
+          <li><strong>SpaceX</strong> - In 2002 Musk founded Space Exploration Technologies Corp., traded as SpaceX.
+          </li>
+          <br>
+          <li><strong>Tesla</strong> - In 2004 he invested $6.5 million, became the majority shareholder, and joined Tesla's board of directors as chairman, Musk become CEO and product architect in 2008.
+          </li>
+          <br>
+          <li><strong>SolarCity and Tesla Energy</strong> - Tesla acquired SolarCity for over $2 billion in 2016 and merged it with its battery energy storage products division to create Tesla Energy.
+          </li>
+          <br>
+          <li><strong>Neuralink</strong> - In 2016, Musk co-founded Neuralink, a neurotechnology startup company to integrate the human brain with artificial intelligence (AI).
+          </li>
+          <br>
+          <li><strong>The Boring Company</strong> - In 2016, Musk founded The Boring Company to construct tunnels.
+          </li>
+          <br>
+        </ul>
+        <i id="below-comment">"what Elon did with Tesla is one of the greatest contributions to climate change anyone's ever made". - Bill Gates </i>
+        <br>
     </div>
-    <div id="tribute-info">
-      <h3>About Him</h3>
-      <ul>
-        <li><strong>Early Life</strong> -	Elon Reeve Musk
-June 28 1971, (age 50) Pretoria, Transvaal, South Africa
-        </li>
-        <br>
-        <li><strong>Education</strong> - In 1995 University of Pennsylvania, Graduated with a Bachelor of Arts degree in physics and a Bachelor of Science degree in economics.
-        </li>
-        <br>
-        <h3>Business Carrer</h3>
-        <li><strong>Zip2</strong> - 1995 Founded Web Software Zip2 with others, Compaq acquired Zip2 for $307 million in cash in February 1999, and Musk received $22 million for his 7-percent share.
-        </li>
-        <br>
-        <li><strong>X.com</strong> - 1999 Musk co-founded X.com, renamed PayPal in 2001. In 2002, PayPal was acquired by eBay for $1.5 billion in stock, of which Musk—the largest shareholder with 11.72% of shares—received $175.8 million.
-        </li>
-        <br>
-        <li><strong>SpaceX</strong> - In 2002 Musk founded Space Exploration Technologies Corp., traded as SpaceX.
-        </li>
-        <br>
-        <li><strong>Tesla</strong> - In 2004 he invested $6.5 million, became the majority shareholder, and joined Tesla's board of directors as chairman, Musk become CEO and product architect in 2008.
-        </li>
-        <br>
-        <li><strong>SolarCity and Tesla Energy</strong> - Tesla acquired SolarCity for over $2 billion in 2016 and merged it with its battery energy storage products division to create Tesla Energy.
-        </li>
-        <br>
-        <li><strong>Neuralink</strong> - In 2016, Musk co-founded Neuralink, a neurotechnology startup company to integrate the human brain with artificial intelligence (AI).
-        </li>
-        <br>
-        <li><strong>The Boring Company</strong> - In 2016, Musk founded The Boring Company to construct tunnels.
-        </li>
-        <br>
-      </ul>
-      <i id="below-comment">"what Elon did with Tesla is one of the greatest contributions to climate change anyone's ever made". - Bill Gates </i>
-      <br>
+    <h5>You should read more about this on <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Elon_Musk">Wikipedia.</a></h5>
   </div>
-  <h5>You should read more about this on <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Elon_Musk">Wikipedia.</a></h5>
-</div>
+
+  
+</body>
+</html>
